--- a/SASS/Pages/home.scss
+++ b/SASS/Pages/home.scss
@@ -1,18 +1,18 @@
 .container00 {
   &.container01 {
-    background-image: url(/IMAGENS/home/01.jpg);
+    background-image: url(../../IMAGENS/home/01.jpg);
   }
 
   &.container02 {
-    background-image: url(/IMAGENS/home/03.jpg);
+    background-image: url(../../IMAGENS/home/03.jpg);
   }
 
   &.container03 {
-    background-image: url(/IMAGENS/home/02.gif);
+    background-image: url(../../IMAGENS/home/02.jpg);
   }
 
   &.container04 {
-    background-image: url(/IMAGENS/home/04.jpg);
+    background-image: url(../../IMAGENS/home/04.jpg);
   }
 }
 
