--- a/SASS/Pages/humanSpace.scss
+++ b/SASS/Pages/humanSpace.scss
@@ -1,18 +1,18 @@
 .container00 {
   &.container08 {
-    background-image: url(/IMAGENS/humanFlight/01.jpg);
+    background-image: url(../../IMAGENS/humanFlight/01.jpg);
   }
   &.container09 {
-    background-image: url(/IMAGENS/humanFlight/02.jpg);
+    background-image: url(../../IMAGENS/humanFlight/02.jpg);
   }
   &.container10 {
-    background-image: url(/IMAGENS/humanFlight/03.jpg);
+    background-image: url(../../IMAGENS/humanFlight/03.jpg);
   }
   &.container11 {
-    background-image: url(/IMAGENS/humanFlight/04.jpg);
+    background-image: url(../../IMAGENS/humanFlight/04.jpg);
   }
   &.container12 {
-    background-image: url(/IMAGENS/humanFlight/05.jpg);
+    background-image: url(../../IMAGENS/humanFlight/05.jpg);
   }
 }
 
