ajustes no caminho das imagens

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -103,7 +103,7 @@
   background-image: url(../../IMAGENS/home/03.jpg);
 }
 .container00.container03 {
-  background-image: url(../../IMAGENS/home/02.jpg);
+  background-image: url(../../IMAGENS/home/02.gif);
 }
 .container00.container04 {
   background-image: url(../../IMAGENS/home/04.jpg);
