--- a/SASS/Pages/home.scss
+++ b/SASS/Pages/home.scss
@@ -8,7 +8,7 @@
   }
 
   &.container03 {
-    background-image: url(../../IMAGENS/home/02.jpg);
+    background-image: url(../../IMAGENS/home/02.gif);
   }
 
   &.container04 {
