--- a/CSS/style.css
+++ b/CSS/style.css
@@ -97,16 +97,16 @@
   }
 }
 .container00.container01 {
-  background-image: url(../IMAGENS/home/01.jpg);
+  background-image: url(../../IMAGENS/home/01.jpg);
 }
 .container00.container02 {
-  background-image: url(../IMAGENS/home/03.jpg);
+  background-image: url(../../IMAGENS/home/03.jpg);
 }
 .container00.container03 {
-  background-image: url(../IMAGENS/home/02.gif);
+  background-image: url(../../IMAGENS/home/02.gif);
 }
 .container00.container04 {
-  background-image: url(../IMAGENS/home/04.jpg);
+  background-image: url(../../IMAGENS/home/04.jpg);
 }
 
 .titlePadding {
@@ -150,28 +150,28 @@
   }
 }
 .container00.container05 {
-  background-image: url(../IMAGENS/falcon9/01.jpg);
+  background-image: url(../../IMAGENS/falcon9/01.jpg);
 }
 .container00.container06 {
-  background-image: url(../IMAGENS/falcon9/02.jpg);
+  background-image: url(../../IMAGENS/falcon9/02.jpg);
 }
 .container00.carrossel01 {
-  background-image: url(../IMAGENS/falcon9/03.jpg);
+  background-image: url(../../IMAGENS/falcon9/03.jpg);
 }
 .container00.carrossel02 {
-  background-image: url(../IMAGENS/falcon9/04.jpg);
+  background-image: url(../../IMAGENS/falcon9/04.jpg);
 }
 .container00.carrossel03 {
-  background-image: url(../IMAGENS/falcon9/05.jpg);
+  background-image: url(../../IMAGENS/falcon9/05.jpg);
 }
 .container00.carrossel04 {
-  background-image: url(../IMAGENS/falcon9/06.jpg);
+  background-image: url(../../IMAGENS/falcon9/06.jpg);
 }
 .container00.carrossel05 {
-  background-image: url(../IMAGENS/falcon9/07.jpg);
+  background-image: url(../../IMAGENS/falcon9/07.jpg);
 }
 .container00.container07 {
-  background-image: url(../IMAGENS/falcon9/08.jpg);
+  background-image: url(../../IMAGENS/falcon9/08.jpg);
 }
 
 .titleFalcon9 {
@@ -338,19 +338,19 @@
   }
 }
 .container00.container08 {
-  background-image: url(../IMAGENS/humanFlight/01.jpg);
+  background-image: url(../../IMAGENS/humanFlight/01.jpg);
 }
 .container00.container09 {
-  background-image: url(../IMAGENS/humanFlight/02.jpg);
+  background-image: url(../../IMAGENS/humanFlight/02.jpg);
 }
 .container00.container10 {
-  background-image: url(../IMAGENS/humanFlight/03.jpg);
+  background-image: url(../../IMAGENS/humanFlight/03.jpg);
 }
 .container00.container11 {
-  background-image: url(../IMAGENS/humanFlight/04.jpg);
+  background-image: url(../../IMAGENS/humanFlight/04.jpg);
 }
 .container00.container12 {
-  background-image: url(../IMAGENS/humanFlight/05.jpg);
+  background-image: url(../../IMAGENS/humanFlight/05.jpg);
 }
 
 body {
